# dev-blog-api

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
assets/: screen.css
dev_blog_testing/content/: test1.md  test2.md  test3.md
src/lib/: config.rs  domain.rs  lib.rs  renderer.rs  service.rs
src/lib/routes/: home.rs  index.rs  mod.rs  openapi.rs  storage.rs
src/lib/routes/login/: get.rs  mod.rs
templates/: base.html  home.html  login.html
tests/api/: health_check.rs  helpers.rs  main.rs  storage_check.rs  storage_list.rs  storage_read.rs  storage_write.rs
