[package]
name = "dev-blog-api"
version = "0.5.0"
edition = "2021"
description = "The API which supports my developer blog, jeff-mitchell.dev"
readme = "README.md"
repository = "ttps://github.com/sentinel1909/dev-blog-api.git"
license = "MIT"
publish = false

[[bin]]
name = "dev-blog-api"
path = "src/bin/main.rs"

[lib]
name = "dev_blog_api_lib"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.93"
axum = "0.7.9"
http = "1.1.0"
libsql = "0.3.1"
once_cell = "1.20.2"
serde = { version = "1.0.214", features = ["derive"] }
shuttle-axum = "0.49.0"
shuttle-runtime = { version = "0.49.0", default-features = false  }
shuttle-turso = "0.49.0"
tera = "1.20.0"
thiserror = "2.0.3"
tokio = { version = "1", features = [ "net" ] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = [ "cors", "fs", "normalize-path", "request-id", "trace", "util" ] }
tracing = { version = "0.1.40", features = [ "log" ] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
utoipa = "5.2.0"
uuid = { version = "1.11.0", features = [ "v4" ] }

