[package]
name = "dev-blog-api"
version = "1.6.0"
edition = "2021"
description = "The API which supports my developer blog, jeff-mitchell.dev"
readme = "README.md"
repository = "ttps://github.com/sentinel1909/dev-blog-api.git"
license = "MIT"
publish = false

[[bin]]
name = "dev-blog-api"
path = "src/bin/main.rs"

[lib]
name = "dev_blog_api_lib"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
axum-macros = "0.5.0"
libsql = "0.6.0"
once_cell = "1.20.2"
opendal = { version = "0.51.1", features = [ "services-fs", "services-s3" ] } 
serde = { version = "1.0.217", features = ["derive"] }
shuttle-axum = "0.51.0"
shuttle-opendal = "0.51.0"
shuttle-runtime = { version = "0.51.0", default-features = false  }
shuttle-turso = "0.51.0"
tera = "1.20.0"
thiserror = "2.0.11"
tokio = { version = "1.43", features = [ "net" ] }
tower = "0.5.2"
tower-http = { version = "0.6.1", features = [ "cors", "fs", "normalize-path", "request-id", "trace", "util" ] }
tracing = { version = "0.1.41", features = [ "log" ] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
utoipa = "5.3.1"
uuid = { version = "1.12.1", features = [ "v4" ] }

[dev-dependencies]
reqwest = { version = "0.12.12", features = [ "json" ] } 
serde_json = "1.0.137"

